fix link contrast, + leaderboard pills

--- a/ChallengeDashboard/wwwroot/app.css
+++ b/ChallengeDashboard/wwwroot/app.css
@@ -54,7 +54,7 @@ h2 .btn {
 .footer {
     flex-shrink: 0;
     border-top: 10px solid var(--dark-blue-color);
-    background-color: var(--light-blue-color);
+    background-color: var(--dark-blue-color);
     color: white !important;
     padding: 1em 1em 2em;
     box-shadow: 0 0 1em rgba(0, 0, 0, 0.5);
@@ -62,7 +62,7 @@ h2 .btn {
 }
 
 a { 
-    color: var(--light-blue-color);
+    color: var(--dark-blue-color);
 }
 
 .dropdown-menu {
